fix: replace hex colors and z-index with variables

--- a/static/css/components/editions.less
+++ b/static/css/components/editions.less
@@ -278,16 +278,16 @@ tbody {
   height: 100%;
   background: linear-gradient(
     to right,
-    #e9d7aa 0%,
-    #d6b97c 1px,
-    #e9d7aa 3px,
-    #d6b97c 4px,
-    #e9d7aa 6px,
-    #d6b97c 7px,
-    #e9d7aa 100%
+    @beige 0%,
+    @dark-yellow 1px,
+    @beige 3px,
+    @dark-yellow 4px,
+    @beige 6px,
+    @dark-yellow 7px,
+    @beige 100%
   );
   background-size: 5px 100%;
-  z-index: 1;
+  z-index: @z-index-level-1;
 }
 
 .spine-width-10 { width: 10px; }
